--- a/styles/style.css
+++ b/styles/style.css
@@ -117,7 +117,7 @@ main {
 
 .banner-content p {
     color: rgb(17, 17, 17);
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: 500;
     line-height: 25px;
     margin: 0;
@@ -186,5 +186,42 @@ main {
     .school img {
         width: 46px;
         height: 46px;
+    }
+
+    .banner {
+        flex-direction: column-reverse;
+    }
+
+    .banner img {
+        width: 336.58px;
+        height: 413px;
+        margin: auto auto 20px auto;
+    }
+
+    .banner-content {
+        margin: auto;
+        text-align: center;
+    }
+
+    .banner-content h2 {
+        font-size: 32px;
+        font-weight: 700;
+        line-height: 40px;
+    }
+
+    .banner-content p {
+        color: rgb(17, 17, 17);
+        font-size: 1.2rem;
+        font-weight: 500;
+        line-height: 1.25rem;
+        margin: 0 6% 5% 6%;
+    }
+
+    .enroll {
+        width: 150px;
+        height: 52px;
+        padding: 6px 24px 6px 24px;
+        font-size: 18px;
+        font-weight: 700;
     }
 }
