--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 .quicksand-font {
     font-family: "Quicksand", serif;
@@ -140,6 +141,79 @@ main {
     height: 760px;
 }
 
+.curriculum-cards {
+    display: flex;
+    justify-content: center;
+    gap: 2.5rem;
+}
+
+.curriculum h2 {
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-size: 3.75rem;
+    font-weight: 900;
+    margin-bottom: 6rem;
+}
+
+.card {
+    text-align: center;
+    width: 30rem;
+    height: 35rem;
+    padding: 6% 3% 0 3%;
+    border-radius: 1.56rem;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+}
+
+.card img {
+    width: 11.25rem;
+    height: 11.123rem;
+}
+
+.card h3 {
+    color: rgb(32, 32, 32);
+    font-size: 2rem;
+    font-weight: 900;
+}
+
+.card p {
+    color: rgb(128, 128, 128);
+    font-family: Raleway;
+    font-size: 1.24rem;
+    font-weight: 660;
+    line-height: 2.34rem;
+    margin-bottom: 2.3rem;
+}
+
+.card a {
+    text-decoration: none;
+    font-size: 1.24rem;
+    font-weight: 900;
+}
+
+#cur-blu {
+    background: linear-gradient(180.00deg, rgb(222, 245, 255), rgba(255, 255, 255, 0) 40%), rgb(255, 255, 255);
+}
+
+#cur-yel {
+    background: linear-gradient(180.00deg, rgb(255, 244, 220), rgba(255, 255, 255, 0) 40%), rgb(255, 255, 255);
+}
+
+#cur-pur {
+    background: linear-gradient(180.00deg, rgb(238, 225, 255), rgba(255, 255, 255, 0) 40%), rgb(255, 255, 255);
+}
+
+.anc-blu {
+    color: rgb(100, 200, 255);
+}
+
+.anc-yel {
+    color: rgb(240, 170, 0);
+}
+
+.anc-pur {
+    color: rgb(135, 0, 255);
+}
+
 
 
 @media screen and (max-width: 36rem) {
@@ -147,10 +221,10 @@ main {
         margin: 0;
     }
 
-    main {
-        margin-left: 5%;
-        margin-right: 5%;
-    }
+    /* main {
+        margin-left: 10%;
+        margin-right: 10% ;
+    } */
 
     .school h3 {
         display: none;
@@ -204,16 +278,16 @@ main {
     }
 
     .banner-content h2 {
-        font-size: 32px;
+        font-size: 2rem;
         font-weight: 700;
-        line-height: 40px;
+        line-height: 2.5rem;
     }
 
     .banner-content p {
         color: rgb(17, 17, 17);
         font-size: 1.2rem;
         font-weight: 500;
-        line-height: 1.25rem;
+        line-height: 2rem;
         margin: 0 6% 5% 6%;
     }
 
@@ -223,5 +297,44 @@ main {
         padding: 6px 24px 6px 24px;
         font-size: 18px;
         font-weight: 700;
+    }
+
+
+    .curriculum h2 {
+        font-size: 2.2rem;
+        font-weight: 800;
+        margin-bottom: 5rem;
+        margin-top: 5rem ;
+    }
+
+    .curriculum-cards {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card {
+        height: 30rem;
+        width: 20rem;
+    }
+
+    .card h3 {
+        color: rgb(32, 32, 32);
+        font-size: 1.9rem;
+        font-weight: 900;
+    }
+
+    .card p {
+        color: rgb(128, 128, 128);
+        font-family: Raleway;
+        font-size: 1.1rem;
+        font-weight: 660;
+        line-height: 2.34rem;
+        margin-bottom: 2.3rem;
+    }
+
+    .card a {
+        text-decoration: none;
+        font-size: 1.1rem;
+        font-weight: 900;
     }
 }
