--- a/styles/style.css
+++ b/styles/style.css
@@ -9,14 +9,18 @@
 }
 
 #background {
-    background-image: url(/assets/bg.png);
-    background-size: cover;
+    background-image: url(/assets/bg.png),
+        linear-gradient(0.00deg, rgba(254, 163, 1, 0.3), rgba(255, 255, 255, 0.3) 30%);
+    /* background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 100vh; */
 }
+
+
 
 body {
     margin: 0;
+    padding: 0;
 }
 
 header,
@@ -214,6 +218,137 @@ main {
     color: rgb(135, 0, 255);
 }
 
+.arrow {
+    text-align: center;
+    margin-top: 90px;
+}
+
+.arrow-cont {
+    width: 4.95rem;
+    height: 4.95rem;
+    border-radius: 2.475rem;
+    background: rgb(254, 163, 1);
+    border: none;
+    font-size: 2rem;
+    font-weight: 900;
+    color: rgb(255, 255, 255);
+    margin: 4px;
+}
+
+.story h1 {
+    text-align: center;
+    font-size: 46px;
+    font-weight: 700;
+    margin-bottom: 100px;
+    margin-top: 120px;
+}
+
+.story-content {
+    display: flex;
+    gap: 1.65rem;
+    justify-content: center;
+}
+
+.story1 {
+    width: 540.27px;
+    height: 630.52px;
+    background: white;
+    border-radius: 16px;
+    position: relative;
+}
+
+.story1 img {
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+
+.story1 h3 {
+    margin: 35px;
+    color: rgb(0, 0, 0);
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 38.35px;
+    margin-top: 58px;
+}
+
+.date1 {
+    position: absolute;
+    top: 50%;
+    left: 7%;
+    border-radius: 47.93px;
+    background: rgb(60, 216, 232);
+    width: 174.51px;
+    height: 47.93px;
+    border: none;
+    color: rgb(255, 255, 255);
+    font-family: Raleway;
+    font-size: 15.34px;
+    font-weight: 500;
+}
+
+.story1 p {
+    margin: 35px;
+    color: rgb(102, 102, 102);
+    font-family: Raleway;
+    font-size: 15.34px;
+    font-weight: 500;
+    line-height: 28.76px;
+    margin-top: 48px;
+}
+
+.story-rest {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.65rem;
+}
+
+.story-r {
+    width: 290.69px;
+    height: 301.61px;
+    background: white;
+    position: relative;
+}
+
+.story-r h4 {
+    font-size: 15.34px;
+    font-weight: 700;
+    margin: 30px;
+    margin-top: 40px;
+}
+
+.date_r {
+    position: absolute;
+    top: 53%;
+    left: 7%;
+    border-radius: 47.93px;
+    background: rgb(149, 178, 38);
+    width: 174.51px;
+    height: 38.35px;
+    border: none;
+    color: rgb(255, 255, 255);
+    font-family: Raleway;
+    font-size: 15.34px;
+    font-weight: 500;
+}
+
+#date2 {
+    background: rgb(93, 88, 240);
+    ;
+}
+
+.story-r {
+    width: 290.69px;
+    height: 301.61px;
+    background: white;
+    border-radius: 16px;
+    position: relative;
+}
+
+.story-r img {
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+
 
 
 @media screen and (max-width: 36rem) {
@@ -225,7 +360,7 @@ main {
         margin-left: 10%;
         margin-right: 10% ;
     } */
-
+    
     .school h3 {
         display: none;
     }
@@ -304,7 +439,7 @@ main {
         font-size: 2.2rem;
         font-weight: 800;
         margin-bottom: 5rem;
-        margin-top: 5rem ;
+        margin-top: 5rem;
     }
 
     .curriculum-cards {
@@ -336,5 +471,47 @@ main {
         text-decoration: none;
         font-size: 1.1rem;
         font-weight: 900;
+    }
+
+    .arrow {
+        display: none;
+    }
+
+    .story-content {
+        display: block;
+
+    }
+
+    .story1 {
+        display: none;
+    }
+
+    .story-rest {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 6px;
+    }
+
+    .story-r {
+        width: 173.09px;
+        height: 179.59px;
+        border-radius: 9.53px;
+    }
+
+    .story-r img {
+        border-top-left-radius: 9.53px;
+        border-top-right-radius: 9.53px;
+        width: 100%;
+    }
+
+    .date_r {
+        width: 103.91px;
+        height: 22.83px;
+        font-size: 9.13px;
+    }
+
+    .story-r h4 {
+        font-size: 9.13px;
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
